--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,130 @@
-.App {
+body{
+  
   text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+  background-color: #252525;
+  /* font-weight: bold; */
   color: white;
+  margin: 3px;
 }
 
-.App-link {
-  color: #61dafb;
+.main-container{
+  margin-inline-start: 4.5rem;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+h1{
+  margin-top: 12px;
 }
+.heading-left-section{
+  color: green;
+  text-decoration: underline;
+}
+
+.heading-mid-section{
+  color: white;
+  text-decoration: underline;
+}
+
+.heading-right-section{
+  color: orangered;
+  text-decoration: underline;
+}
+.main-container {
+  border: 2px solid white;
+  height: 15rem;
+  width: 90%;
+  display: flex; /* Add flexbox */
+  margin-bottom: 20px;
+}
+
+.left-container {
+  display: inline-block;
+  border: 2px solid white;
+  height: 15rem;
+  width: 15%;
+  border-radius: 10px;
+}
+
+img{
+  height: 15rem;
+  width: 100%;
+  object-fit: cover;
+  border-radius: 10px;
+}
+
+.right-container {
+  flex-grow: 1; /* Fill remaining width */
+  /* border: 2px solid blue; */
+  height: 15rem;
+  width: auto; /* Remove fit-content */
+  padding: 0 15px 0 15px;
+}
+
+.bottom-section, .title-section, .price-section{
+  /* border: 2px solid purple; */
+  height: 3rem;
+  line-height: 3rem;
+  text-align:start;
+  margin-left: 4px;
+  
+}
+
+.plot-section{
+  height: 5rem;
+  margin-top: 4px;
+  text-align: start;
+  /* border: 2px solid purple; */
+  margin-left: 4px;
+}
+
+.bottom-section{
+  /* margin-top: 35px; */
+  display: flex;
+}
+
+.rating-section{
+  display: flex;
+  justify-content: space-between;
+  height: 3rem;
+  width: 45%;
+  /* border: 2px dashed yellow; */
+}
+
+.btn{
+  height: 20px;
+  width: 20px;
+  cursor: pointer;
+}
+
+
+.btn-section{
+  display: flex;
+  justify-content: flex-end;
+  height: 2rem;
+  flex-grow: 2;
+  width: auto;
+  /* border: 2px dashed orangered; */
+}
+
+.fav-btn, .buy-btn{
+  /* height: 20px; */
+  /* border: 2px solid green; */
+  width: 8rem;
+  border-radius: 20px;
+  cursor: pointer;
+}
+
+.fav-btn{
+  margin-right: 10px;
+}
+
+
+/*-----------------NAVBAR-------------*/
+/* .navBarContainer{
+  background-color: rgb(121, 178, 178);
+} */
+
+/* .navBarCart{
+  height: 40%;
+  background-color: white;
+} */
+
